Add backward flow ir analyze method